--- a/index.qmd
+++ b/index.qmd
@@ -1,11 +1,168 @@
 ---
-title: "course-sm"
+title: "Social Movements in Germany"
 ---
 
-This is a Quarto website.
+Instructor: Dr. Michael C. Zeller    
+Email: [m.zeller@lmu.de](mailto:m.zeller@lmu.de) (please use your LMU email address for communication)    
+Webpage: <https://michaelzeller.de/>    
+Office hour: Wednesdays, 11.00 - 12.00    
+Office: GSI (Oettingenstr. 67) Room H105    
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
 
-```{r}
-1 + 1
+
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(timeDate)
+library(tibble)
+library(dplyr)
+library(knitr)
+
+# https://www.benlinzmeier.rocks/post/an-rmarkdown-syllabus-template/
+# http://svmiller.com/blog/2016/07/r-markdown-syllabus/
+
+library(lubridate) # for submission date of assignments
+
+# library(RefManageR)
+# bib <- ReadBib("library.bib")
+# myopts <- BibOptions(bib.style = "authoryear", style="latex", first.inits=FALSE, max.names = 20)
+
+# https://www.lmu.de/en/workspace-for-students/abc-study-guide/lecture-periods/index.html
+# https://www.ferienwiki.de/feiertage/de/bayern
+
+#This code chunk sets up a table of meeting days for the course.
+#You can set days of the week for course meetings (e.g. Monday and Wednesday).
+#Semester start and end dates are selected and then university holidays like spring break are specified.
+#Days of the week that the course meets. Must be full day name in quotes.
+Days <- c("Thursday")
+#Semester start date for classes as YYYY/M/D.
+SemesterStart <- as.Date("2025/10/16")
+#Semester end date for classes as YYYY/M/D.
+SemesterEnd <- as.Date("2026/2/7")
+#Fall break start and stop date.
+WinterBreak <-
+  seq.Date(
+    from = as.Date("2025/12/22"),
+    to = as.Date("2026/1/6"),
+    by = "day"
+  )
+#Spring break start and stop date.
+# SpringBreak <-
+#   seq.Date(
+#     from = as.Date("2022/02/28"),
+#     to = as.Date("2022/03/06"),
+#     by = "day"
+#   )
+#Creates a list of days within the semester.
+SemesterDays <-
+  seq.Date(from = SemesterStart, to = SemesterEnd, by = "day")
+#Add day before Thanksgiving.
+#Add day before Thanksgiving.
+# DayBeforeThnks<-as.Date(holiday(
+#     year = getRmetricsOptions("currentYear"),
+#     Holiday = c("USThanksgivingDay")))-1
+#Full list of holidays that there are no classes including breaks.
+Holidays <-
+  c(as.Date(holiday(
+    year = getRmetricsOptions("currentYear"),
+    Holiday = c("USLaborDay", "USThanksgivingDay", "USMLKingsBirthday")
+  )), WinterBreak)
+#Create a list of semester days excluding holidays.
+SemesterDays <- SemesterDays[!SemesterDays %in% Holidays]
+#Make dataframe with all semester days.
+ClassDays <- data.frame(index = 1:length(SemesterDays))
+#Insert dates.
+ClassDays$Date <- SemesterDays
+#Insert weekday designation.
+ClassDays$Weekday <- weekdays(ClassDays$Date)
+#Limit to the class meeting days.
+MeetingDays <- ClassDays[ClassDays$Weekday %in% Days, ]
+#Create numeric list of weeks.
+Week <- cut.Date(MeetingDays$Date, breaks = "week")
+levels(Week) <- 1:length(levels(Week))
+MeetingDays$Week <- Week
+MeetingDays$Class <- 1:nrow(MeetingDays)
+
+Lecture_Topic <- c("Introduction and the development of social movements (SMs)", # Class 1 - (Tarrows intro and chapter 1)
+                   "SM theories: collective behaviour, resource mobilisation, political processes", # Class 2
+                   "SM theories: framing, civil society", # Class 3
+                   "Mobilisation, recruitment, participation", # Class 4
+                   "Collective identity and emotions", # Class 5
+                   "Organisation, strategies and tactics", # Class 6
+                   "SMs and the media", # Class 7 
+                   "SM coalitions", # Class 8
+                   "State responses", # Class 9
+                   "Counter-mobilisation and countermovements", # Class 10
+                   "SMs online", # Class 11
+                   "SM impact", # Class 12
+                   "Demobilisation", # Class 13
+                   "Contemporary social movements and beyond: climate, migration") # Class 14
+                   # "NO CLASS MEETING TODAY") # Class 15"
+
+          
+links <- c("#class1","#class2","#class3","#class4","#class5","#class6","#class7","#class8","#class9","#class10","#class11","#class12","#class13","#class14")
+
+MeetingDays <- bind_cols(MeetingDays, Lecture = Lecture_Topic)
+#### Grade table ####
+Grades <- tribble( ~ Grade,
+                   ~ Range,
+                   "A",
+                   "90-100",
+                   "B",
+                   "80-89",
+                   "C",
+                   "70-79",
+                   "D",
+                   "60-69",
+                   "F",
+                   "< 60")
+####Assignment weight table####
+Weights <- tribble(
+                    ~ Item,
+                    ~ Weight,
+                    "Writing scaffolding",
+                    "20 %",
+                    "Semester Project",
+                    "25 %",
+                    "Labratory Assignments",
+                    "20 %",
+                    "Midterm Exam",
+                    "15 %",
+                    "Final Exam",
+                    "20 %"
+                  )
 ```
+
+## Course particulars
+
+- Course level: **BA**
+- Course format: **seminar**
+<!-- - Course number: **15030** -->
+<!-- - Credits: **2.0 SWS** -->
+- Module assignment: **Einführung in das Politische System Deutschlands**
+
+## Course description
+<!-- Kompetenzen -->
+
+Social movements, long an area of inquiry in the social sciences, have attracted a great deal of attention in recent years. How and why do people engage in collective action? In what ways do they organise and mobilise? What tactics and strategies do they use? How do movements succeed---and how do they fail? This course will introduce students to the scholarship that addresses these questions. We will draw on literature about social movements generally and about specific movement cases, especially (but not exclusively) in Germany. Students will acquire detailed knowledge about the theories guiding past and present social movement research as well as expertise about specific cases of social movement activity.
+
+## Course schedule overview
+
+```{r Schedule, echo=FALSE, message=FALSE, warning=FALSE}
+
+library(kableExtra)
+
+# MeetingDays$Lecture <- paste0("[", MeetingDays$Lecture, "](", links, ")")
+
+kable(MeetingDays[,c("Date","Class","Week","Lecture")],
+      # caption = "Course Schedule.",
+      align = c("l","c","c","l"),
+      format = "simple"
+      ) %>% kableExtra::kable_styling(latex_options = "hold_position")
+```
+
+
+## Course and Teacher evaluation
+
+Student input for the purpose of course improvement is taken very seriously and will potentially be done periodically. Please take the time to evaluate this course and the instructor, especially at the end of the semester. Evaluations will in no way affect your grade.
+
