sm class 1 slides

--- a/content/index.qmd
+++ b/content/index.qmd
@@ -5,23 +5,25 @@ engine: knitr
 
 # Class 1
 
-<!-- ```{r show-slide-tabs, echo=FALSE, results="asis"} -->
-<!-- #| warning: false -->
-<!-- slide_buttons <- function(slide_id) { -->
-<!--   glue::glue('<p class="text-center buttons"><a class="btn btn-danger" target="_blank" href="{slide_id}.html"><i class="fa-solid fa-arrow-up-right-from-square"></i> View all slides in new window</a> <a class="btn btn-danger" target="_blank" href="{slide_id}.pdf" role="button"><i class="fa-solid fa-file-pdf"></i> Download PDF of all slides</a></p>') -->
-<!-- } -->
 
-<!-- slide_buttons("/slides/slides_01") -->
+```{r show-slide-tabs, echo=FALSE, results="asis"}
+#| warning: false
+slide_buttons <- function(slide_id) {
+  glue::glue('<p class="text-center buttons"><a class="btn btn-danger" target="_blank" href="{slide_id}.html"><i class="fa-solid fa-arrow-up-right-from-square"></i> View all slides in new window</a> <a class="btn btn-danger" target="_blank" href="{slide_id}.pdf" role="button"><i class="fa-solid fa-file-pdf"></i> Download PDF of all slides</a></p>')
+}
 
-<!-- library(xaringanExtra) -->
+slide_buttons("/slides/slides_01")
 
-<!-- xaringanExtra::embed_xaringan( -->
-<!--   "/slides/slides_01.html", -->
-<!--   ratio = "16:9", -->
-<!--   border = "none", -->
-<!--   margin = "0 auto" -->
-<!-- ) -->
-<!-- ``` -->
+library(xaringanExtra)
+
+xaringanExtra::embed_xaringan(
+  "/slides/slides_01.html",
+  ratio = "16:9",
+  border = "none",
+  margin = "0 auto"
+)
+```
+
 
 <!-- # Class 2 -->
 
